--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 /* MASTER STYLES */
 body {
-margin: 0%;
-font-family: "Lato", sans-serif;
-max-width: 1400px;
-margin: auto;
+    margin: 0%;
+    font-family: "Lato", sans-serif;
+    max-width: 1200px;
+    margin: auto;
+    /* background-color: rgb(245,245,245); */
 }
 
 /*.container {
@@ -13,7 +14,8 @@ margin: auto;
 
 /* NAV STYLES */
 .Logo {
-    background-color: rgb(173, 173, 173);
+    /* background-color: rgb(173, 173, 173); */
+    background-color: rgb(220,220,220);
 }
 
 .logo {
@@ -32,6 +34,7 @@ margin: auto;
     padding: 30px;
     border-bottom: 2px solid rgb(185, 22, 22);
     border-top: 2px solid rgb(185, 22, 22);
+    font-size: large;
 }
 
 .navigation > div {
@@ -59,6 +62,10 @@ margin: auto;
     text-align: center;
     padding: 10px;
     background-color: whitesmoke;
+    font-size: large;
+    font-weight: bold;
+    font-family: "Lato", sans-serif;
+    /* color: black; */
 }
 
 .comingsoon {
@@ -81,7 +88,7 @@ margin: auto;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 350px;
+    height: 150px;
     width: 100%;
 }
 
@@ -97,7 +104,7 @@ margin: auto;
     height: 100%;
     text-align: center;
     color: white;
-    font-size: xx-large;
+    font-size: large;
 
 }
 
@@ -118,7 +125,7 @@ margin: auto;
 }
 
 .img-text-wrapper a:hover{
-    color: blue;
+    color: rgb(0, 204, 255);
 }
 
 /******** ABOUT TUTORING *******/
@@ -141,7 +148,15 @@ margin: auto;
     margin-top: 50px;
     margin-bottom: 50px;
     border-radius: 10px;
+}
 
+.about_tutoring_text {
+    width: 600px;
+    height: auto;
+    margin: 0 auto;
+    text-align: center;
+    /* border:2px solid; */
+    /* border-color: rgb(185, 22, 22); */
 }
 
 /*.about-pic {
@@ -153,7 +168,7 @@ margin: auto;
 
 
 .tutor_btn {
-    color: rgb(226, 226, 31);
+    color: rgb(198, 198, 27);
     text-decoration: none;
     transition: color 0.5s;
     font-weight: bold;
@@ -173,7 +188,36 @@ margin: auto;
     transition: color 0.5s;
 }
 
+.returnHomeBtn {
+    max-width: 135px;
+    margin: auto;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    background: rgb(226, 226, 31);
+    text-align: center;
+    cursor: pointer;  
+    font-weight: bold;
+    text-decoration: none;
+    transition: color 0.5s;
+}
+
 /****Notes styles******/
+
+.portfolio-items-wrapper-notes_single {
+    /*display: grid;
+    grid-template-columns: 200px;
+    align-items: center;
+    justify-items: center;*/
+    /*margin-left: 40%;
+    margin-right: 40%;*/
+    display: grid;
+    grid-template-columns: 1fr;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
+}
 
 .portfolio-items-wrapper-notes {
     /*display: grid;
@@ -182,10 +226,12 @@ margin: auto;
     justify-items: center;*/
     /*margin-left: 40%;
     margin-right: 40%;*/
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
 }
 
 
@@ -199,7 +245,7 @@ margin: auto;
     background-position: center;
     background-repeat: no-repeat;
     height: 150px;
-    width: 400px;
+    width: 100%;
 }
 
 .img-text-wrapper-notes {
@@ -214,7 +260,7 @@ margin: auto;
     height: 100%;
     text-align: center;
     color: white;
-    font-size: xx-large;
+    font-size: large;
 
 }
 
@@ -225,7 +271,7 @@ margin: auto;
 }
 
 .img-text-wrapper-notes a:hover{
-    color: blue;
+    color: rgb(0, 204, 255);
 }
 
 
@@ -299,6 +345,7 @@ textarea.contact-form-text{
     padding: 10px;
     margin-left: 20%;
     margin-right: 20%;
+    background-color: rgb(238,238,238);
 }
 
 .tutoring {
@@ -306,6 +353,7 @@ textarea.contact-form-text{
     padding: 10px;
     margin-left: 20%;
     margin-right: 20%;
+    background-color: rgb(238,238,238);
 }
 
 hr {
@@ -313,23 +361,35 @@ hr {
 }
 
 h3 {
-    color: rgb(226, 226, 31);
+    color: rgb(198, 198, 27);
 }
 
 .provideindex {
     display: flex;
+    background-color: rgb(238,238,238);
+    height: 150px;
+}
+
+.provideindex_text {
+    width: 300px;
+    height: 150px;
+    /* border: 2px solid rgb(185, 22, 22); */
+    margin-right: 10px;
+    margin-top: 10px;
+    text-align: center;
 }
 
 .Notes_pic {
     width: 200px;
     height: 150px;
     float: left;
+    /* border: 2px solid rgb(185, 22, 22); */
     margin-right: 10px;
     margin-bottom: 10px;
 }
 
 .exercise_pic {
-    width: 200px;
+    width: 250px;
     height: 150px;
     float: left;
     margin-right: 10px;
@@ -337,10 +397,10 @@ h3 {
 } 
 
 .Coursework_pic {
-    width: 200px;
+    width: 250px;
     height: 150px;
-    float: left;
-    margin-right: 10px;
+    float: right;
+    /* margin-right: 10px; */
     margin-bottom: 10px;
 } 
 
@@ -358,7 +418,7 @@ h3 {
     text-align: center;
     line-height: 65px;
     font-size: 15px;
-    background-color: whitesmoke;
+    background-color: rgb(238,238,238);
 }
 
 .footer-bottom {
