--- a/styles.css
+++ b/styles.css
@@ -141,12 +141,15 @@ body {
 .about-text {
     width: auto;
     text-align: center;
-    border:2px solid;
-    border-color: rgb(185, 22, 22);
+    /* border:2px solid; */
+    /* border-color: rgb(185, 22, 22); */
+    background-color: rgb(238,238,238);
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 50px;
     margin-bottom: 50px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     border-radius: 10px;
 }
 
@@ -188,6 +191,16 @@ body {
     transition: color 0.5s;
 }
 
+.contactmebtn a {
+    text-decoration: none;
+    transition: color 0.5s;
+    color:rgb(185, 22, 22);
+}
+
+.contactmebtn a:hover{
+    color: rgb(0, 204, 255);
+}
+
 .returnHomeBtn {
     max-width: 135px;
     margin: auto;
@@ -200,6 +213,7 @@ body {
     font-weight: bold;
     text-decoration: none;
     transition: color 0.5s;
+    color:rgb(185, 22, 22)
 }
 
 /****Notes styles******/
