--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,45 @@ body {
     color: rgb(185, 22, 22);
 }
 
+/* .hamburger {
+    position: absolute;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+} 
+
+.bar{
+    display: block;
+    width: 100%;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3 ease-in-out;
+    border-radius: 10px;
+    background-color: rgb(214, 214, 23);
+} */
+
+.hamburger {
+    position: absolute;
+    /* top: .75rem;
+    right: 1rem; */
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 70px;
+    height: 21px;
+}
+
+.hamburger .bar {
+    display: block;
+    height: 3px;
+    width: 100%;
+    margin: 5px auto;
+    background-color: rgb(214, 214, 23);
+    border-radius: 10px;
+}
 
 .quote {
     text-align: center;
@@ -141,8 +180,7 @@ body {
 .about-text {
     width: auto;
     text-align: center;
-    /* border:2px solid; */
-    /* border-color: rgb(185, 22, 22); */
+    border:2px solid rgb(185, 22, 22);
     background-color: rgb(238,238,238);
     margin-left: 10%;
     margin-right: 10%;
@@ -150,17 +188,21 @@ body {
     margin-bottom: 50px;
     padding-top: 10px;
     padding-bottom: 10px;
+    padding-right: 7%;
+    padding-left: 7%;
     border-radius: 10px;
 }
 
 .about_tutoring_text {
-    width: 600px;
-    height: auto;
-    margin: 0 auto;
+    max-width: 600px;
     text-align: center;
-    /* border:2px solid; */
-    /* border-color: rgb(185, 22, 22); */
+    padding: 10px;
+    margin-left: 10%;
+    margin-right: 10%;
+    border:2px solid rgb(185, 22, 22);
+    position: relative;
 }
+
 
 /*.about-pic {
     width: 150px;
@@ -444,4 +486,166 @@ h3 {
     position: absolute;
     padding-top: 20px;
     font-size: small;
+}
+
+
+
+@media only screen and (max-width: 1000px) { /*At 1000px and below, what we provide goes wierd, put into column*/
+    .provideindex {
+        /* display: flex; */
+        background-color: rgb(238,238,238);
+        height: 500px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 10px;
+        /* border: 2px solid rgb(185, 22, 22); */
+        
+    }
+    
+    .provideindex_text {
+        width: 300px;
+        height: 150px;
+        /* border: 2px solid rgb(185, 22, 22); */
+        margin-right: 10px;
+        margin-top: 10px;
+        text-align: center;
+    }
+    
+    .Notes_pic {
+        width: 200px;
+        height: 150px;
+        float: right;
+        /* border: 2px solid rgb(185, 22, 22); */
+        margin-right: 10px;
+        margin-bottom: 10px;
+    }
+    
+    .exercise_pic {
+        width: 200px;
+        height: 150px;
+        float: left;
+        margin-right: 10px;
+        margin-bottom: 10px;
+    } 
+    
+    .Coursework_pic {
+        width: 200px;
+        height: 150px;
+        float: right;
+        /* margin-right: 10px; */
+        margin-bottom: 10px;
+    } 
+}
+
+@media only screen and (max-width: 650px) { /*Nav bar squishes, need to collapse*/
+    .hamburger{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+        padding-bottom: 20px;
+    }
+
+    .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1){
+        width: 30px;
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3){
+        width: 30px;
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .navigation{
+        /* display: none; */
+        display: flex;
+        justify-content: space-between;
+        padding: 30px;
+        border-bottom: 2px solid rgb(185, 22, 22);
+        border-top: 2px solid rgb(185, 22, 22);
+        font-size: large;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .nav-link-wrapper{
+        display: none;
+        width: 100%;
+        text-align: center;
+        padding-top: 10px;
+        flex-direction: column;
+    }
+
+    .nav-link-wrapper.active{  /*NOT GETTING ACTIVE*/
+        display: flex;
+        
+    }
+
+}
+
+
+
+
+/* If 650px doesnt fix everything add another */
+@media only screen and (max-width: 600px) { /*My phone width is 393, so say 400 and below*/
+    .provideindex {
+        /* display: flex; */
+        background-color: rgb(238,238,238);
+        height: 1000px;
+        display: grid;
+        grid-template-columns: 1fr;
+        padding: 10px;
+        /* border: 2px solid rgb(185, 22, 22); */
+        
+    }
+    
+    .provideindex_text {
+        width: 300px;
+        height: 150px;
+        /* border: 2px solid rgb(185, 22, 22); */
+        margin-right: 10px;
+        margin-top: 10px;
+        text-align: center;
+        position: relative;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .Notes_pic {
+        width: 200px;
+        height: 150px;
+        float: right;
+        /* border: 2px solid rgb(185, 22, 22); */
+        margin-right: 10px;
+        margin-bottom: 10px;
+        position: relative;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .exercise_pic {
+        width: 200px;
+        height: 150px;
+        float: left;
+        margin-right: 10px;
+        margin-bottom: 10px;
+        position: relative;
+        margin-left: auto;
+        margin-right: auto;
+    } 
+    
+    .Coursework_pic {
+        width: 200px;
+        height: 150px;
+        float: right;
+        /* margin-right: 10px; */
+        margin-bottom: 10px;
+        position: relative;
+        margin-left: auto;
+        margin-right: auto;
+    } 
 }
