--- a/styles.css
+++ b/styles.css
@@ -650,3 +650,91 @@ h3 {
         margin-right: auto;
     } 
 }
+
+@media only screen and (max-width: 530px) {
+    
+    .img-text-wrapper {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        text-align: center;
+        color: white;
+        font-size: small;
+    
+    }
+    
+    .blurbox {
+      background: rgb(0,0,0, 0.6);
+      color: white;
+      border: 2px solid #f1f1f1;
+      z-index: 2;
+      width: 100%;
+      padding: 10px;
+      text-align: center;
+      /* font-size: small; */
+    }
+    
+    .img-text-wrapper a {
+        text-decoration: none;
+        transition: color 0.5s;
+        color: white;
+    }
+    
+    .img-text-wrapper a:hover{
+        color: rgb(0, 204, 255);
+    }
+}
+
+@media only screen and (max-width: 420px) {
+    .logo {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 300px;
+        height: 110px;
+        align-items: center;
+        justify-content: center;
+    }
+    .img-text-wrapper {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        text-align: center;
+        color: white;
+        font-size: x-small;
+    
+    }
+    
+    .blurbox {
+      background: rgb(0,0,0, 0.6);
+      color: white;
+      border: 2px solid #f1f1f1;
+      z-index: 2;
+      width: 100%;
+      padding: 10px;
+      text-align: center;
+      /* font-size: small; */
+    }
+    
+    .img-text-wrapper a {
+        text-decoration: none;
+        transition: color 0.5s;
+        color: white;
+    }
+    
+    .img-text-wrapper a:hover{
+        color: rgb(0, 204, 255);
+    }
+}
