adjust sizing of website intro for mobile

--- a/styles.css
+++ b/styles.css
@@ -649,6 +649,15 @@ h3 {
         margin-left: auto;
         margin-right: auto;
     } 
+
+    .website-introduction {
+        text-align: center;
+        padding: 10px;
+        margin-left: 10%;
+        margin-right: 10%;
+        background-color: rgb(238,238,238);
+    }
+    
 }
 
 @media only screen and (max-width: 530px) {
@@ -688,6 +697,14 @@ h3 {
     
     .img-text-wrapper a:hover{
         color: rgb(0, 204, 255);
+    }
+
+    .website-introduction {
+        text-align: center;
+        padding: 10px;
+        margin-left: 10%;
+        margin-right: 10%;
+        background-color: rgb(238,238,238);
     }
 }
 
@@ -736,5 +753,13 @@ h3 {
     
     .img-text-wrapper a:hover{
         color: rgb(0, 204, 255);
+    }
+
+    .website-introduction {
+        text-align: center;
+        padding: 10px;
+        margin-left: 10%;
+        margin-right: 10%;
+        background-color: rgb(238,238,238);
     }
 }
