--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    opacity: 0.85;
     height: 150px;
     width: 100%;
 }
@@ -301,6 +302,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    opacity: 0.85;
     height: 150px;
     width: 100%;
 }
