--- a/styles.css
+++ b/styles.css
@@ -629,10 +629,10 @@ hr {
 .footer-bottom {
     background: rgb(173, 173, 173);
     height: 40px;
-    width:100%;
+    width: 100%;
 
     text-align: center;
-    position: absolute;
+    position: relative;
     padding-top: 20px;
     font-size: small;
 }
