--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,8 @@ body {
     margin-bottom: 10px;
     padding: 10px;
     border-radius: 5px;
-    background: rgb(175, 6, 6, 0.2);
+    border: 2px solid rgb(0, 0, 0);
+    background: rgba(54, 175, 6, 0.2);
     text-align: center;
     cursor: pointer;  
     font-weight: bold;
